--- a/luogulofrontend/package.json
+++ b/luogulofrontend/package.json
@@ -11,6 +11,7 @@
     "@soerenmartius/vue3-clipboard": "^0.1.2",
     "axios": "^0.27.2",
     "jquery": "^3.6.0",
+    "katex": "^0.16.0",
     "pagination": "^0.4.6",
     "vue": "^3.2.25",
     "vue-router": "4",
