--- a/luogulofrontend/package.json
+++ b/luogulofrontend/package.json
@@ -15,7 +15,9 @@
     "pagination": "^0.4.6",
     "vue": "^3.2.25",
     "vue-router": "4",
+    "vue-session": "^1.0.0",
     "vue3-cookies": "^1.0.6",
+    "vue3-storage": "^0.1.11",
     "vuejs-pagination-semantic-ui": "^1.0.0"
   },
   "devDependencies": {
